fix vertical alignment/padding for bloquote content

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -463,7 +463,7 @@ blockquote {
   color: var(--code-inner-color);
   padding-left: 2rem;
   padding-bottom: 8px;
-  padding-bottom: 8px;
+  padding-top: 8px;
   margin: 2rem 0px;
   position: relative;
 }
@@ -477,6 +477,7 @@ blockquote::before {
   position: absolute;
   width: 8px;
   height: 100%;
+  top: 0;
   left: 0px;
   background: var(--code-bgd-color);
   border-radius: 5px;
